@@ -4,6 +4,8 @@
 SendOnlyFilledData=false
 # external script is called just before email messages are sent
 #ExternalScript=bin/php/script.php
+# external script which can override default page data
+#ExternalData=bin/php/set_data.php
 
 [AdditionalElements]
 description=enabled
